--- a/index.html
+++ b/index.html
@@ -5,80 +5,130 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frédéric Mirindi - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
     <header>
-        <h1>Frédéric Mirindi</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#education">Education</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#research">Research</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <h1>Frédéric Mirindi</h1>
+            <nav>
+                <ul>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#personal">Personal Info</a></li>
+                    <li><a href="#education">Education</a></li>
+                    <li><a href="#experience">Experience</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#affiliations">Affiliations</a></li>
+                    <li><a href="#research">Research</a></li>
+                    <li><a href="#references">References</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
-    <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>PhD Student in Economics at the University of Manitoba, focusing on Experimental Economics, Labour Economics, and Microeconometrics.</p>
-        </section>
+    <section id="contact" class="section">
+        <div class="container">
+            <h2>Contact Information</h2>
+            <div class="contact-details">
+                <p><i class="fas fa-map-marker-alt"></i> 1407-610 Portage Ave, Winnipeg MB R3C 0G5, Canada</p>
+                <p><i class="fas fa-phone"></i> +1 (204) 298-4337</p>
+                <p><i class="fas fa-envelope"></i> <a href="mailto:mirindifrederic@gmail.com">mirindifrederic@gmail.com</a> / <a href="mailto:mirindif@myumanitoba.ca">mirindif@myumanitoba.ca</a></p>
+                <p><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/fr%C3%A9d%C3%A9ric-mirindi-5bb1b466">fredericmirindi</a></p>
+                <p><i class="fas fa-globe"></i> <a href="https://www.fredericmirindi.com">www.fredericmirindi.com</a></p>
+            </div>
+        </div>
+    </section>
 
-        <section id="education">
+    <section id="personal" class="section">
+        <div class="container">
+            <h2>Personal Information</h2>
+            <p>Date of birth: January 8, 1994</p>
+            <p>Citizenship: Canadian</p>
+        </div>
+    </section>
+
+    <section id="education" class="section">
+        <div class="container">
             <h2>Education</h2>
             <ul>
-                <li>
-                    <h3>PhD Student, Economics</h3>
-                    <p>University of Manitoba, 2024 - Present</p>
-                </li>
-                <li>
-                    <h3>Pre-doctoral Student, Economics</h3>
-                    <p>University of Manitoba, 2023 - 2024</p>
-                </li>
-                <!-- Add more education items -->
+                <li><strong>2024 - Present:</strong> PhD Student, Economics, Concentration: Economics & Econometrics, Research fields: Experimental Economics, Labour Economics, and Microeconometrics</li>
+                <li><strong>2023 - 2024:</strong> Pre-doctoral Student, Economics, University of Manitoba (Canada)</li>
+                <li><strong>2019 - 2021:</strong> PhD Student, Economics & Econometrics, Charles University (Prague)</li>
+                <li><strong>2018 - 2019:</strong> M.Sc. in Development Evaluation, University of Antwerp (Belgium)</li>
+                <li><strong>2017:</strong> Master's Bridge Programme, African Economic Research Consortium (AERC) (Kenya)</li>
+                <li><strong>2014-2016:</strong> M.Sc. in Economics, Catholic University of Bukavu (DRC)</li>
+                <li><strong>2011-2014:</strong> B.Sc. in Economics, Catholic University of Bukavu (DRC)</li>
             </ul>
-        </section>
+        </div>
+    </section>
 
-        <section id="experience">
+    <section id="experience" class="section">
+        <div class="container">
             <h2>Experience</h2>
+            <h3>Employment</h3>
             <ul>
-                <li>
-                    <h3>Data Scientist</h3>
-                    <p>Government of Manitoba, 2024 - Present</p>
-                </li>
-                <li>
-                    <h3>Data Analyst</h3>
-                    <p>Canada Life, 2022 - 2024</p>
-                </li>
-                <!-- Add more experience items -->
+                <li><strong>2024 - Present:</strong> Data Scientist at the Government of Manitoba (Winnipeg)</li>
+                <li><strong>2022 - 2024:</strong> Data Analyst at Canada Life (Winnipeg)</li>
             </ul>
-        </section>
+            <h3>Teaching and Research Experience</h3>
+            <ul>
+                <li><strong>2024 - Present:</strong> Professor at Prolang, Services Linguistiques Professionnels (Québec)</li>
+                <li><strong>2022 - Present:</strong> Online Tutor at Park Street Education (Ontario)</li>
+                <li><strong>2019-2021:</strong> Research Assistant at CERGE-EI, Charles University (Prague)</li>
+                <li><strong>2015:</strong> Research Assistant at the University of Bayreuth (Germany)</li>
+            </ul>
+        </div>
+    </section>
 
-        <section id="skills">
+    <section id="skills" class="section">
+        <div class="container">
             <h2>Skills</h2>
             <ul>
                 <li>Computer Applications: Julia, Stata, R, Excel, Python, Latex</li>
-                <li>Data Analysis: Microeconometrics, machine learning, experimental economics</li>
-                <li>Languages: English (Fluent), French & Swahili (Native)</li>
+                <li>Data Analysis: Microeconometrics, machine learning, experimental economics. Survey data, nightlight data, WDI, DHS data.</li>
+                <li>Languages:
+                    <ul>
+                        <li>English: Fluent</li>
+                        <li>French & Swahili: Native</li>
+                    </ul>
+                </li>
             </ul>
-        </section>
+        </div>
+    </section>
 
-        <section id="research">
+    <section id="affiliations" class="section">
+        <div class="container">
+            <h2>Affiliations</h2>
+            <p>CPA Western School of Business (CPAWSB), CPA preparatory course</p>
+        </div>
+    </section>
+
+    <section id="research" class="section">
+        <div class="container">
             <h2>Research Outputs and Blogs</h2>
             <ul>
-                <li>
-                    <h3>Navigating construction project outcomes: Synergy through the evolution of digital innovation and strategic management</h3>
-                    <p>Mirindi, D., Mirindi, F., & Oshineye, O. (2024). International Journal of Latest Research in Engineering and Technology (IJLRET), 10(3), 17-25.</p>
-                </li>
-                <!-- Add more research items -->
+                <li>Mirindi, D., Mirindi, F., & Oshineye, O. (2024). Navigating construction project outcomes: Synergy through the evolution of digital innovation and strategic management. <i>International Journal of Latest Research in Engineering and Technology (IJLRET)</i>, <i>10</i>(3), 17-25. <a href="http://ijlret.com/Papers/Vol-10-issue-03/4.C2024359.pdf"><i class="fas fa-file-alt"></i></a></li>
+                <li>Kelly Bado: Une artiste qui fait du bien. <a href="https://webouest.ca/auteur/frederic-mirindi/"><i class="fas fa-external-link-alt"></i></a></li>
+                <li>La Journée internationale des femmes au Manitoba: Célébration et réflexion. <a href="https://webouest.ca/auteur/frederic-mirindi/"><i class="fas fa-external-link-alt"></i></a></li>
+                <li>Célébration de l'héritage et des contributions des Noirs au Canada: Un regard approfondi. <a href="https://webouest.ca/auteur/frederic-mirindi/"><i class="fas fa-external-link-alt"></i></a></li>
+                <li>Winnipeg: Un creuset de cultures à la croisée des chemins. <a href="https://webouest.ca/auteur/frederic-mirindi/"><i class="fas fa-external-link-alt"></i></a></li>
             </ul>
-        </section>
-    </main>
+        </div>
+    </section>
+
+    <section id="references" class="section">
+        <div class="container">
+            <h2>References</h2>
+            <p><strong>Professor Julia Witt</strong><br>Dep. of Economics, University of Manitoba<br>Email: <a href="mailto:julia.witt@umanitoba.ca">julia.witt@umanitoba.ca</a></p>
+            <p><strong>Professor Ryan Godwin</strong><br>Dep. of Economics, University of Manitoba<br>Email: <a href="mailto:ryan.godwin@umanitoba.ca">ryan.godwin@umanitoba.ca</a></p>
+        </div>
+    </section>
 
     <footer>
-        <p>&copy; 2024 Frédéric Mirindi. All rights reserved.</p>
+        <div class="container">
+            <p>&copy; 2024 Frédéric Mirindi. All rights reserved.</p>
+        </div>
     </footer>
 </body>
 </html>
